--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -94,7 +95,106 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
+            ],
+            "scripts": []
+          }
+        }
+      }
+    },
+    "what": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:application": {
+          "strict": true
+        }
+      },
+      "root": "projects/what",
+      "sourceRoot": "projects/what/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/what",
+            "index": "projects/what/src/index.html",
+            "main": "projects/what/src/main.ts",
+            "polyfills": "projects/what/src/polyfills.ts",
+            "tsConfig": "projects/what/tsconfig.app.json",
+            "assets": [
+              "projects/what/src/favicon.ico",
+              "projects/what/src/assets"
+            ],
+            "styles": [
+              "projects/what/src/styles.css"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "projects/what/src/environments/environment.ts",
+                  "with": "projects/what/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "what:build:production"
+            },
+            "development": {
+              "browserTarget": "what:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "what:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/what/src/test.ts",
+            "polyfills": "projects/what/src/polyfills.ts",
+            "tsConfig": "projects/what/tsconfig.spec.json",
+            "karmaConfig": "projects/what/karma.conf.js",
+            "assets": [
+              "projects/what/src/favicon.ico",
+              "projects/what/src/assets"
+            ],
+            "styles": [
+              "projects/what/src/styles.css"
             ],
             "scripts": []
           }
